--- a/pyproject.toml
+++ b/pyproject.toml
@@ -17,6 +17,7 @@ onnxruntime = "^1.19.2"
 [tool.poetry.group.dev.dependencies]
 ipykernel = "^6.29.5"
 matplotlib = "^3.9.2"
+black = "^24.8.0"
 
 [build-system]
 requires = ["poetry-core"]
