--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,8 +1,8 @@
 [tool.poetry]
 name = "armcrop"
-version = "0.1.0"
-description = ""
-authors = ["Your Name <you@example.com>"]
+version = "0.1.1"
+description = "A machine learning model that crops CT scans to a bone of interest in the arm"
+authors = ["Gregory Spangenberg <gspangen@westerneng.ca>"]
 readme = "README.md"
 
 [tool.poetry.dependencies]
