remove dependencies and widen ranges

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,27 +1,24 @@
 [tool.poetry]
 name = "armcrop"
-version = "0.5.5"
+version = "0.5.6"
 description = "A machine learning model that crops CT scans to a bone of interest in the arm"
 authors = ["Gregory Spangenberg <gspangen@westerneng.ca>"]
 readme = "README.md"
 
 [tool.poetry.dependencies]
-python = "^3.12"
-simpleitk = "^2.4.0"
-numpy = "==1.*"
-pandas = "^2.2.3"
-networkx = "^3.3"
-onnxruntime = "1.18"
-huggingface-hub = "^0.25.1"
+python = ">=3.11"
+simpleitk = ">=2.4.0"
+numpy = "==2.*"
+pandas = ">=2.2.3"
+networkx = ">=3.3"
+onnxruntime = ">=1.19"
+huggingface-hub = ">=0.25.1"
 simpleitkutilities = "^0.3.0"
-vtk = "^9.4.0"
-opencv-python = "^4.10.0.84"
+vtk = ">=9.4.0"
 
 
 [tool.poetry.group.dev.dependencies]
-ipykernel = "^6.29.5"
-matplotlib = "^3.9.2"
-black = "^24.8.0"
+black = ">=24.8.0"
 
 [build-system]
 requires = ["poetry-core"]
