--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,6 +1,6 @@
 [tool.poetry]
 name = "armcrop"
-version = "0.5.6"
+version = "0.6.0"
 description = "A machine learning model that crops CT scans to a bone of interest in the arm"
 authors = ["Gregory Spangenberg <gspangen@westerneng.ca>"]
 readme = "README.md"
@@ -15,6 +15,7 @@ onnxruntime = ">=1.19"
 huggingface-hub = ">=0.25.1"
 simpleitkutilities = "^0.3.0"
 vtk = ">=9.4.0"
+opencv-python = ">4"
 
 
 [tool.poetry.group.dev.dependencies]
